gvpy/grammar/generated/GVParser.py
# Generated from GVParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GVParser ( Parser ):

    grammarFileName = "GVParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'->'", "'--'", 
                     "'{'", "'}'", "'['", "']'", "';'", "','", "':'", "'='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "KW_STRICT", "KW_GRAPH", "KW_DIGRAPH", 
                      "KW_NODE", "KW_EDGE", "KW_SUBGRAPH", "DIRECTED_EDGE", 
                      "UNDIRECTED_EDGE", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "COLON", "EQUALS", "QUOTED_STRING", 
                      "NUMBER", "ID", "LINE_COMMENT", "BLOCK_COMMENT", "PREPROC_LINE", 
                      "WS", "HTML_OPEN", "HTML_CLOSE", "HTML_TEXT" ]

    RULE_graph = 0
    RULE_graphType = 1
    RULE_stmtList = 2
    RULE_stmt = 3
    RULE_attrStmt = 4
    RULE_attrList = 5
    RULE_aList = 6
    RULE_edgeStmt = 7
    RULE_edgeRhs = 8
    RULE_edgeOp = 9
    RULE_nodeStmt = 10
    RULE_nodeId = 11
    RULE_port = 12
    RULE_subgraph = 13
    RULE_id_ = 14
    RULE_htmlString = 15
    RULE_htmlContent = 16

    ruleNames =  [ "graph", "graphType", "stmtList", "stmt", "attrStmt", 
                   "attrList", "aList", "edgeStmt", "edgeRhs", "edgeOp", 
                   "nodeStmt", "nodeId", "port", "subgraph", "id_", "htmlString", 
                   "htmlContent" ]

    EOF = Token.EOF
    KW_STRICT=1
    KW_GRAPH=2
    KW_DIGRAPH=3
    KW_NODE=4
    KW_EDGE=5
    KW_SUBGRAPH=6
    DIRECTED_EDGE=7
    UNDIRECTED_EDGE=8
    LBRACE=9
    RBRACE=10
    LBRACK=11
    RBRACK=12
    SEMI=13
    COMMA=14
    COLON=15
    EQUALS=16
    QUOTED_STRING=17
    NUMBER=18
    ID=19
    LINE_COMMENT=20
    BLOCK_COMMENT=21
    PREPROC_LINE=22
    WS=23
    HTML_OPEN=24
    HTML_CLOSE=25
    HTML_TEXT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def graphType(self):
            return self.getTypedRuleContext(GVParser.GraphTypeContext,0)


        def LBRACE(self):
            return self.getToken(GVParser.LBRACE, 0)

        def stmtList(self):
            return self.getTypedRuleContext(GVParser.StmtListContext,0)


        def RBRACE(self):
            return self.getToken(GVParser.RBRACE, 0)

        def EOF(self):
            return self.getToken(GVParser.EOF, 0)

        def KW_STRICT(self):
            return self.getToken(GVParser.KW_STRICT, 0)

        def id_(self):
            return self.getTypedRuleContext(GVParser.Id_Context,0)


        def getRuleIndex(self):
            return GVParser.RULE_graph

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraph" ):
                return visitor.visitGraph(self)
            else:
                return visitor.visitChildren(self)




    def graph(self):

        localctx = GVParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_graph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 34
                self.match(GVParser.KW_STRICT)


            self.state = 37
            self.graphType()
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17694720) != 0):
                self.state = 38
                self.id_()


            self.state = 41
            self.match(GVParser.LBRACE)
            self.state = 42
            self.stmtList()
            self.state = 43
            self.match(GVParser.RBRACE)
            self.state = 44
            self.match(GVParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_GRAPH(self):
            return self.getToken(GVParser.KW_GRAPH, 0)

        def KW_DIGRAPH(self):
            return self.getToken(GVParser.KW_DIGRAPH, 0)

        def getRuleIndex(self):
            return GVParser.RULE_graphType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphType" ):
                return visitor.visitGraphType(self)
            else:
                return visitor.visitChildren(self)




    def graphType(self):

        localctx = GVParser.GraphTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_graphType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.StmtContext)
            else:
                return self.getTypedRuleContext(GVParser.StmtContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(GVParser.SEMI)
            else:
                return self.getToken(GVParser.SEMI, i)

        def getRuleIndex(self):
            return GVParser.RULE_stmtList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtList" ):
                return visitor.visitStmtList(self)
            else:
                return visitor.visitChildren(self)




    def stmtList(self):

        localctx = GVParser.StmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmtList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17695348) != 0):
                self.state = 48
                self.stmt()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 49
                    self.match(GVParser.SEMI)


                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrStmt(self):
            return self.getTypedRuleContext(GVParser.AttrStmtContext,0)


        def edgeStmt(self):
            return self.getTypedRuleContext(GVParser.EdgeStmtContext,0)


        def nodeStmt(self):
            return self.getTypedRuleContext(GVParser.NodeStmtContext,0)


        def subgraph(self):
            return self.getTypedRuleContext(GVParser.SubgraphContext,0)


        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.Id_Context)
            else:
                return self.getTypedRuleContext(GVParser.Id_Context,i)


        def EQUALS(self):
            return self.getToken(GVParser.EQUALS, 0)

        def getRuleIndex(self):
            return GVParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GVParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.attrStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.edgeStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.nodeStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.subgraph()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.id_()
                self.state = 62
                self.match(GVParser.EQUALS)
                self.state = 63
                self.id_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrList(self):
            return self.getTypedRuleContext(GVParser.AttrListContext,0)


        def KW_GRAPH(self):
            return self.getToken(GVParser.KW_GRAPH, 0)

        def KW_NODE(self):
            return self.getToken(GVParser.KW_NODE, 0)

        def KW_EDGE(self):
            return self.getToken(GVParser.KW_EDGE, 0)

        def getRuleIndex(self):
            return GVParser.RULE_attrStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrStmt" ):
                return visitor.visitAttrStmt(self)
            else:
                return visitor.visitChildren(self)




    def attrStmt(self):

        localctx = GVParser.AttrStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attrStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 52) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 68
            self.attrList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(GVParser.LBRACK)
            else:
                return self.getToken(GVParser.LBRACK, i)

        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(GVParser.RBRACK)
            else:
                return self.getToken(GVParser.RBRACK, i)

        def aList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.AListContext)
            else:
                return self.getTypedRuleContext(GVParser.AListContext,i)


        def getRuleIndex(self):
            return GVParser.RULE_attrList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrList" ):
                return visitor.visitAttrList(self)
            else:
                return visitor.visitChildren(self)




    def attrList(self):

        localctx = GVParser.AttrListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attrList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.match(GVParser.LBRACK)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17694720) != 0):
                    self.state = 71
                    self.aList()


                self.state = 74
                self.match(GVParser.RBRACK)
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==11):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.Id_Context)
            else:
                return self.getTypedRuleContext(GVParser.Id_Context,i)


        def EQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(GVParser.EQUALS)
            else:
                return self.getToken(GVParser.EQUALS, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(GVParser.SEMI)
            else:
                return self.getToken(GVParser.SEMI, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GVParser.COMMA)
            else:
                return self.getToken(GVParser.COMMA, i)

        def getRuleIndex(self):
            return GVParser.RULE_aList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAList" ):
                return visitor.visitAList(self)
            else:
                return visitor.visitChildren(self)




    def aList(self):

        localctx = GVParser.AListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_aList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.id_()
                self.state = 80
                self.match(GVParser.EQUALS)
                self.state = 81
                self.id_()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13 or _la==14:
                    self.state = 82
                    _la = self._input.LA(1)
                    if not(_la==13 or _la==14):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 17694720) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeId(self):
            return self.getTypedRuleContext(GVParser.NodeIdContext,0)


        def subgraph(self):
            return self.getTypedRuleContext(GVParser.SubgraphContext,0)


        def edgeRhs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.EdgeRhsContext)
            else:
                return self.getTypedRuleContext(GVParser.EdgeRhsContext,i)


        def attrList(self):
            return self.getTypedRuleContext(GVParser.AttrListContext,0)


        def getRuleIndex(self):
            return GVParser.RULE_edgeStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeStmt" ):
                return visitor.visitEdgeStmt(self)
            else:
                return visitor.visitChildren(self)




    def edgeStmt(self):

        localctx = GVParser.EdgeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_edgeStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 18, 19, 24]:
                self.state = 89
                self.nodeId()
                pass
            elif token in [6, 9]:
                self.state = 90
                self.subgraph()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.edgeRhs()
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==7 or _la==8):
                    break

            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 98
                self.attrList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeRhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edgeOp(self):
            return self.getTypedRuleContext(GVParser.EdgeOpContext,0)


        def nodeId(self):
            return self.getTypedRuleContext(GVParser.NodeIdContext,0)


        def subgraph(self):
            return self.getTypedRuleContext(GVParser.SubgraphContext,0)


        def getRuleIndex(self):
            return GVParser.RULE_edgeRhs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeRhs" ):
                return visitor.visitEdgeRhs(self)
            else:
                return visitor.visitChildren(self)




    def edgeRhs(self):

        localctx = GVParser.EdgeRhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edgeRhs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.edgeOp()
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 18, 19, 24]:
                self.state = 102
                self.nodeId()
                pass
            elif token in [6, 9]:
                self.state = 103
                self.subgraph()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIRECTED_EDGE(self):
            return self.getToken(GVParser.DIRECTED_EDGE, 0)

        def UNDIRECTED_EDGE(self):
            return self.getToken(GVParser.UNDIRECTED_EDGE, 0)

        def getRuleIndex(self):
            return GVParser.RULE_edgeOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdgeOp" ):
                return visitor.visitEdgeOp(self)
            else:
                return visitor.visitChildren(self)




    def edgeOp(self):

        localctx = GVParser.EdgeOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_edgeOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeId(self):
            return self.getTypedRuleContext(GVParser.NodeIdContext,0)


        def attrList(self):
            return self.getTypedRuleContext(GVParser.AttrListContext,0)


        def getRuleIndex(self):
            return GVParser.RULE_nodeStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeStmt" ):
                return visitor.visitNodeStmt(self)
            else:
                return visitor.visitChildren(self)




    def nodeStmt(self):

        localctx = GVParser.NodeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nodeStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.nodeId()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 109
                self.attrList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(GVParser.Id_Context,0)


        def port(self):
            return self.getTypedRuleContext(GVParser.PortContext,0)


        def getRuleIndex(self):
            return GVParser.RULE_nodeId

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeId" ):
                return visitor.visitNodeId(self)
            else:
                return visitor.visitChildren(self)




    def nodeId(self):

        localctx = GVParser.NodeIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_nodeId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.id_()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 113
                self.port()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(GVParser.COLON)
            else:
                return self.getToken(GVParser.COLON, i)

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.Id_Context)
            else:
                return self.getTypedRuleContext(GVParser.Id_Context,i)


        def getRuleIndex(self):
            return GVParser.RULE_port

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPort" ):
                return visitor.visitPort(self)
            else:
                return visitor.visitChildren(self)




    def port(self):

        localctx = GVParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_port)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(GVParser.COLON)
            self.state = 117
            self.id_()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 118
                self.match(GVParser.COLON)
                self.state = 119
                self.id_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubgraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(GVParser.LBRACE, 0)

        def stmtList(self):
            return self.getTypedRuleContext(GVParser.StmtListContext,0)


        def RBRACE(self):
            return self.getToken(GVParser.RBRACE, 0)

        def KW_SUBGRAPH(self):
            return self.getToken(GVParser.KW_SUBGRAPH, 0)

        def id_(self):
            return self.getTypedRuleContext(GVParser.Id_Context,0)


        def getRuleIndex(self):
            return GVParser.RULE_subgraph

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubgraph" ):
                return visitor.visitSubgraph(self)
            else:
                return visitor.visitChildren(self)




    def subgraph(self):

        localctx = GVParser.SubgraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_subgraph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 122
                self.match(GVParser.KW_SUBGRAPH)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17694720) != 0):
                    self.state = 123
                    self.id_()




            self.state = 128
            self.match(GVParser.LBRACE)
            self.state = 129
            self.stmtList()
            self.state = 130
            self.match(GVParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GVParser.ID, 0)

        def NUMBER(self):
            return self.getToken(GVParser.NUMBER, 0)

        def QUOTED_STRING(self):
            return self.getToken(GVParser.QUOTED_STRING, 0)

        def htmlString(self):
            return self.getTypedRuleContext(GVParser.HtmlStringContext,0)


        def getRuleIndex(self):
            return GVParser.RULE_id_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_" ):
                return visitor.visitId_(self)
            else:
                return visitor.visitChildren(self)




    def id_(self):

        localctx = GVParser.Id_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_id_)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(GVParser.ID)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(GVParser.NUMBER)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(GVParser.QUOTED_STRING)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.htmlString()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlStringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HTML_OPEN(self):
            return self.getToken(GVParser.HTML_OPEN, 0)

        def HTML_CLOSE(self):
            return self.getToken(GVParser.HTML_CLOSE, 0)

        def htmlContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.HtmlContentContext)
            else:
                return self.getTypedRuleContext(GVParser.HtmlContentContext,i)


        def getRuleIndex(self):
            return GVParser.RULE_htmlString

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlString" ):
                return visitor.visitHtmlString(self)
            else:
                return visitor.visitChildren(self)




    def htmlString(self):

        localctx = GVParser.HtmlStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_htmlString)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(GVParser.HTML_OPEN)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24 or _la==26:
                self.state = 139
                self.htmlContent()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self.match(GVParser.HTML_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HTML_TEXT(self):
            return self.getToken(GVParser.HTML_TEXT, 0)

        def HTML_OPEN(self):
            return self.getToken(GVParser.HTML_OPEN, 0)

        def HTML_CLOSE(self):
            return self.getToken(GVParser.HTML_CLOSE, 0)

        def htmlContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GVParser.HtmlContentContext)
            else:
                return self.getTypedRuleContext(GVParser.HtmlContentContext,i)


        def getRuleIndex(self):
            return GVParser.RULE_htmlContent

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHtmlContent" ):
                return visitor.visitHtmlContent(self)
            else:
                return visitor.visitChildren(self)




    def htmlContent(self):
